# OpenSwarm

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  codex.md  config.py  docker-compose.yml  onboard.py  package-lock.json  package.json  pyproject.toml  requirements.txt  run_utils.py  server.py  shared_instructions.md  swarm.py  telegram_bot.py  telemetry.py  telemetry_hooks.py
.github/workflows/: build-tui.yml  live-run-mode-smoke.yml  publish-npm-on-release.yml  test-mac.yml
data_analyst_agent/: data_analyst_agent.py
deep_research/: deep_research.py
derivatives_trader/: __init__.py  derivatives_trader.py  instructions.md
docs/: telemetry.md
docs_agent/: docs_agent.py
equities_trader/: __init__.py  equities_trader.py  instructions.md
fixed_income_trader/: __init__.py  fixed_income_trader.py  instructions.md
fx_trader/: __init__.py  fx_trader.py  instructions.md
orchestrator/: instructions.md  orchestrator.py
patches/: patch_ipython_interpreter_composio.py
risk_manager/: __init__.py  instructions.md  risk_manager.py
scripts/: create_posthog_dashboard.py  smoke-bootstrap-onboard.py  smoke-hosted-tools-gating.py  smoke-openswarm-launcher.js  smoke-run-mode.py  smoke_telemetry.py  write_telemetry_config.py
shared_tools/: GetMarketDataSnapshot.py  __init__.py  model_availability.py
slides_agent/: slides_agent.py
tests/: test_slides_internal_models.py  test_telemetry.py  test_telemetry_scripts.py
us_equities_trader/: __init__.py  instructions.md  us_equities_trader.py
virtual_assistant/: virtual_assistant.py
(+3 files in other folders)
