[project]
name = "open-swarm"
description = "Analysis-only trading desk swarm built on Agency Swarm and the OpenAI Agents SDK"
version = "1.0.1-rc.9"
license = { text = "MIT" }
keywords = ["agency-swarm", "openai", "multi-agent", "openswarm", "trading-desk"]
requires-python = ">=3.12"
dependencies = [
    "agency-swarm[fastapi,litellm]>=1.10.1",
    "questionary>=2.0.0",
    "python-dotenv",
    "rich",
    "fastapi",
    "uvicorn",
    "composio==0.8.0",
    "composio-openai-agents==0.8.0",
    "pytz",
    "httpx",
]

[project.scripts]
openswarm = "run_utils:main"

[tool.setuptools]
py-modules = ["agency", "swarm", "helpers", "config", "onboard", "server", "run_utils"]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["agentswarm-cli*", "venv*", ".venv*", ".agency_swarm*", "node_modules*", "*.node_modules*", "activity*", "mnt*", "pptx*", "slides"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.json", "*.mjs", "agency-*"]

[tool.setuptools.data-files]
"." = ["openswarm.config.mjs", "openswarm.product-env.json", "package.json"]
